--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: tgymnich/fork-sync@v1.2
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          owner: joejordanbrown
+          owner: getsentry
           base: master
           head: master
