--- a/.github/workflows/fork-sync.yml
+++ b/.github/workflows/fork-sync.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: tgymnich/fork-sync@v1.2
+      - uses: joejordanbrown/fork-sync@v1.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           owner: getsentry
